@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.7 2004/08/17 03:05:02 minskim Exp $
+$NetBSD: distinfo,v 1.8 2004/10/25 15:39:02 minskim Exp $
 
-SHA1 (liferea-0.5.3.tar.gz) = e5bcbf94344911df515eca1b0a13a823c805b7f7
-Size (liferea-0.5.3.tar.gz) = 943477 bytes
+SHA1 (liferea-0.6.0.tar.gz) = a7b790b126b8430b5fc1f760ea80d197c46aa5fc
+Size (liferea-0.6.0.tar.gz) = 1001195 bytes
